force-app/main/default/objects/AITermsAcknowledgment__c/AITermsAcknowledgment__c.object-meta.xml
<CustomObject>
    <description>A signed record of a user&apos;s acknowledgment of the AI Assist usage terms, including a typed electronic signature and a link to the authenticated session it was signed under, used as hard proof of consent.</description>
    <label>AI Terms Acknowledgment</label>
    <nameField>
        <displayFormat>AI Terms Ack - {00000}</displayFormat>
        <label>AI Terms Acknowledgment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>✍️ AI Terms Acknowledgments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>