force-app/main/default/objects/AITermsAcknowledgment__c/fields/AcknowledgedDate__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgedDate__c</fullName>
    <description>When this acknowledgment was signed.</description>
    <inlineHelpText>Set automatically at the time of signing.</inlineHelpText>
    <label>Acknowledged Date</label>
    <type>DateTime</type>
</CustomField>