force-app/main/default/objects/AITermsAcknowledgment__c/fields/LoginHistoryId__c.field-meta.xml
<CustomField>
    <fullName>LoginHistoryId__c</fullName>
    <description>References the LoginHistory record for the session this was signed under.</description>
    <inlineHelpText>Set automatically. Provides corroborating proof of an authenticated session at the time of signing.</inlineHelpText>
    <label>Login History Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>