force-app/main/default/objects/AITermsAcknowledgment__c/fields/SignatureText__c.field-meta.xml
<CustomField>
    <fullName>SignatureText__c</fullName>
    <description>The typed full name entered as an electronic signature.</description>
    <inlineHelpText>This constitutes the user&apos;s electronic signature — enter your full legal name.</inlineHelpText>
    <label>Signature Text</label>
    <length>120</length>
    <type>Text</type>
</CustomField>