force-app/main/default/objects/AITermsAcknowledgment__c/fields/TermsVersion__c.field-meta.xml
<CustomField>
    <fullName>TermsVersion__c</fullName>
    <description>Which version of the usage terms was agreed to.</description>
    <inlineHelpText>Set automatically from the current terms version at the time of signing.</inlineHelpText>
    <label>Terms Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>