force-app/main/default/objects/AITermsAcknowledgment__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who signed.</description>
    <inlineHelpText>Set automatically based on the authenticated user completing the acknowledgment.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AI Terms Acknowledgments</relationshipLabel>
    <relationshipName>AI_Terms_Acknowledgments</relationshipName>
    <type>Lookup</type>
</CustomField>