force-app/main/default/objects/AITermsAcknowledgment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>TermsVersion__c</columns>
    <columns>AcknowledgedDate__c</columns>
    <columns>SignatureText__c</columns>
    <columns>LoginHistoryId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>